--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
-    <header class="showcase">
-        <div class="showcase-top">
-            <img src="images/header-image.png" alt="Netflix">
-        </div>
-        <video autoplay muted loop id="background-video">
-            <source src="path/to/your/video.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
-    </header>
+    <div class="header">
+        <nav>
+            <img src="images/logo.png" class="logo">
+            <div>
+                <button>English</button>
+                <button>Sign In</button>
+            </div>
+        </nav>
+    </div>
+
+
 </body>
 </html>
