--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <img src="images/logo.png" class="logo">
             <div>
-                <button>English</button>
+                <button class="language-btn">English <img src="images/down-icon.png" alt=""></button>
                 <button>Sign In</button>
             </div>
         </nav>
