--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <button>Sign In</button>
             </div>
         </nav>
+        <div class="header-content">
+            <h1>Unlimited movies,TV shows and more .</h1>
+            <h3>Watch anywhere. Cancel anytimw</h3>
+            <p>Ready to watch ? Enter your Email to create or restart your membership .</p>
+        </div>
     </div>
 
 
