--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <h1>Unlimited movies,TV shows and more .</h1>
             <h3>Watch anywhere. Cancel anytimw</h3>
             <p>Ready to watch ? Enter your Email to create or restart your membership .</p>
+
+            <form class="email-signup">
+                <input type="email" placeholder="Email Address" required>
+                <button type="submit">Get Started</button>
+            </form>
         </div>
     </div>
 
