--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </nav>
         <div class="header-content">
             <h1>Unlimited movies,TV shows and more .</h1>
-            <h3>Watch anywhere. Cancel anytimw</h3>
+            <h3>Watch Anywhere. Cancel Anytime</h3>
+
             <p>Ready to watch ? Enter your Email to create or restart your membership .</p>
 
             <form class="email-signup">
@@ -29,7 +30,11 @@
 
 
     <div class="features">
-        
+        <div class="row">
+            <div class="text-col">
+                <h2>Enjoy on your TV .</h2>
+            </div>
+        </div>
     </div>
 </body>
 </html>
