--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         <div class="row">
             <div class="text-col">
                 <h2>Enjoy on your TV .</h2>
+
+                <p>Watch on smart TVs,PlayStation,Xbox,
+                    Chromecast,Apple TV ,Blu-ray players and
+                    more.</p>
+                     
+            </div>
+
+            <div class="img-col">
+                <img src="images/feature-1.png">
             </div>
         </div>
     </div>
