--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
             <div class="img-col">
                 <img src="images/feature-1.png">
+                <img src="" alt="">
             </div>
         </div>
     </div>
